# nepali-calendar

./: .gitignore  CHANGELOG.md  README.md  TODO.md  nepali-calendar-claude-code-prompt.md  pyproject.toml  requirements.txt
data/: nepali.calendar.desktop
debian/: changelog  control  rules
nepali_calendar/: app.py  calendar_view.py  date_engine.py  header_bar.py  holidays.py  main.py  settings.py  week_view.py  window.py  year_view.py
nepali_calendar/data/: holidays.json  style.css
scripts/: build-deb.sh  build-ppa.sh  nepali-calendar.sh
